new introduction etc...

--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -24,3 +24,23 @@
   title = "Doc: scipy.optimize.curve\_fit",
   year = 2014
 }
+@article{paper0,
+	title = "Noise in solid-state nanopores.",
+	author = "R M M Smeets, U F Keyser, N H Dekker and C Dekker",
+	year = 2008
+}
+@article{paper1,
+	title = "Low-frequency noise in solid-state nanopores.",
+	author = "R M M Smeets N H Dekker and C Dekker",
+	year = 2009
+}
+@Article{paper2,
+author = {C. Tasserit a. Koutsioubas D. Lairez G. Zalczer and M.-
+C. Clochard},
+title = {Pink Noise of Ionic Conductance through
+Single Artificial Nanopores Revisited},
+journal = {Physical Review
+Letters 105, 260602},
+year = {2010}
+}
+
